# advent_2021

./: Cargo.toml  README.md
src/: array_grid.rs  binary.rs  depth_diffs.rs  dive.rs  hydrothermal.rs  lanternfish.rs  main.rs  seven_segment.rs  smoke_basin.rs  sonar.rs  squid.rs  whales.rs
